refactor: Service 로직 리팩토링